--- a/index.html
+++ b/index.html
@@ -9,10 +9,8 @@
         <link rel="stylesheet" href="reset.css">
         <link rel="stylesheet" href="simplegrid.css">
         <link rel="stylesheet" href="style.css">
-
-        <!-- Google Fonts -->
-        <link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700,900' rel='stylesheet' type='text/css'>
-        <link href='http://fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'>
+        
+        <link href='css/Font-SourceSansPro.css rel='stylesheet' type='text/css'>
 
 
         <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
