--- a/imprint.html
+++ b/imprint.html
@@ -90,6 +90,10 @@
 							FOTOS
 							<a href="pexels.com">pexels.com</a>
 							</p>
+							<p>
+							Icons und Symbole
+							<a href="svgrepo.com">svgrepo.com</a>
+							</p>
 						</div>
 					</div class="content">
 					
@@ -175,6 +179,8 @@
                                         <p>Pleodat GmbH<br>Eine Tochtergesellschaft der <a target="_blank" href="https://www.sprind.org/">Sprin-D</a></p>
                                         <ul>
                                         	<li><a target="_blank" href="https://www.sprind.org/de/projekte/cortex-datenbank/">Sprin-D Projektseite</a></li>
+                                			<li><a target="_blank" href="https://www.cortex-ag.com">Cortex AG Webseite</a></li>
+                                			<li><a target="_blank" href="https://docs.cortex-ag.com">Dokumentation der CortexDB</a></li>
                                         </ul>
                                     </div>
                                 </div>
@@ -198,10 +204,10 @@
                                 <div class="footer-widget">
                                     <h3>Weitere Informationen</h3>
                                     <div class="textwidget">
-                                        <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore.</p>
-                                        <br>
-                                        <p>At vero eos et accusam et justo duo dolores et ea rebum.</p>
-                                    </div>
+                                		<p>Die Pleodat GmbH ist ein Tochterunternehmen der Sprin-D (Agentur für Sprunginnovationen) und die Entwicklungsgesellschaft der Cortex AG.</p>
+                                		<br>
+                                		<p>Projektberatung und -Durchführung sowie die vertrieblichen Aktivitäten, Dokumentationen, Schulungen und weitere Kontakte übernimmt die Cortex AG.</p>
+                            		</div>
                                 </div>
                             </div>
                         </div>
