fixed "Sprin-D" to "SPRIND" and deleted line about encrypted emails

--- a/index.html
+++ b/index.html
@@ -173,9 +173,9 @@
                                 <div class="footer-widget">
                                     <h3>Über uns</h3>
                                     <div class="textwidget">
-                                        <p>Pleodat GmbH<br>Eine Tochtergesellschaft der <a target="_blank" href="https://www.sprind.org/">Sprin-D</a></p>
+                                        <p>Pleodat GmbH<br>Eine Tochtergesellschaft der <a target="_blank" href="https://www.sprind.org/">SPRIND</a></p>
                                         <ul>
-                                        	<li><a target="_blank" href="https://www.sprind.org/de/projekte/cortex-datenbank/">Sprin-D Projektseite</a></li>
+                                        	<li><a target="_blank" href="https://www.sprind.org/de/projekte/cortex-datenbank/">SPRIND Projektseite</a></li>
                                 			<li><a target="_blank" href="https://www.cortex-ag.com">Cortex AG Webseite</a></li>
                                 			<li><a target="_blank" href="https://docs.cortex-ag.com">Dokumentation der CortexDB</a></li>
                                         </ul>
@@ -201,7 +201,7 @@
                                 <div class="footer-widget">
                                     <h3>Weitere Informationen</h3>
                                     <div class="textwidget">
-                                	<p>Die Pleodat GmbH ist ein Tochterunternehmen der Sprin-D (Agentur für Sprunginnovationen) und die Entwicklungsgesellschaft der Cortex AG.</p>
+                                	<p>Die Pleodat GmbH ist ein Tochterunternehmen der SPRIND (Agentur für Sprunginnovationen) und die Entwicklungsgesellschaft der Cortex AG.</p>
                                 	<br>
                                 	<p>Projektberatung und -Durchführung sowie die vertrieblichen Aktivitäten, Dokumentationen, Schulungen und weitere Kontakte übernimmt die Cortex AG.</p>
                             </div>
