--- a/index2.html
+++ b/index2.html
@@ -172,8 +172,8 @@
                     <div class="content" >
                         <h2>Freie Positionen</h2>
                         <p>Wir suchen Dich, um aus Daten die Zukunft des Wissens zu bauen und unsere digitale Gesellschaft sicherer, vertrauensvoller und transparenter zu gestalten.<br/><br/>
-Mit diesem Ziel wurde die PLEODAT GmbH als Tochterunternehmen der <a target="_blank" href="https://www.sprind.org/">Sprin-D</a> gegründet, um eine völlig neuartige Informationsdatenbank zu entwickeln. Hierfür dient uns das innovative Datenbanksystem <a target="_blank" href="https://www.cortex-ag.com/">CortexDB</a> als Basis, an dem Du weiterentwickeln und Deine Erfahrung und Ideen einbringen wirst.<br/><br/>
-Die <a target="_blank" href="https://www.sprind.org/">Sprin-D</a> (Bundesagentur für Sprunginnovationen) hat das Ziel, von Deutschland aus neue Sprunginnovationen für Produkte, Dienstleistungen und Systeme zu schaffen, die unser aller Leben spürbar und nachhaltig besser machen. Dazu verbinden wir Neudenker:innen aus Wissenschaft und Wirtschaft, Menschen mit herausragenden Ideen, besonderer Fachexpertise und Leidenschaft.
+Mit diesem Ziel wurde die PLEODAT GmbH als Tochterunternehmen der <a target="_blank" href="https://www.sprind.org/">SPRIND</a> gegründet, um eine völlig neuartige Informationsdatenbank zu entwickeln. Hierfür dient uns das innovative Datenbanksystem <a target="_blank" href="https://www.cortex-ag.com/">CortexDB</a> als Basis, an dem Du weiterentwickeln und Deine Erfahrung und Ideen einbringen wirst.<br/><br/>
+Die <a target="_blank" href="https://www.sprind.org/">SPRIND</a> (Bundesagentur für Sprunginnovationen) hat das Ziel, von Deutschland aus neue Sprunginnovationen für Produkte, Dienstleistungen und Systeme zu schaffen, die unser aller Leben spürbar und nachhaltig besser machen. Dazu verbinden wir Neudenker:innen aus Wissenschaft und Wirtschaft, Menschen mit herausragenden Ideen, besonderer Fachexpertise und Leidenschaft.
 </p>
 <p>&nbsp;</p>
                         <h2>Welche Aufgaben übernimmst Du?</h2>
@@ -246,9 +246,9 @@ Die <a target="_blank" href="https://www.sprind.org/">Sprin-D</a> (Bundesagentur
                                 <div class="footer-widget">
                                     <h3>Über uns</h3>
                                     <div class="textwidget">
-                                        <p>Pleodat GmbH<br>Eine Tochtergesellschaft der <a target="_blank" href="https://www.sprind.org/">Sprin-D</a></p>
+                                        <p>Pleodat GmbH<br>Eine Tochtergesellschaft der <a target="_blank" href="https://www.sprind.org/">SPRIND</a></p>
                                         <ul>
-                                        	<li><a target="_blank" href="https://www.sprind.org/de/projekte/cortex-datenbank/">Sprin-D Projektseite</a></li>
+                                        	<li><a target="_blank" href="https://www.sprind.org/de/projekte/cortex-datenbank/">SPRIND Projektseite</a></li>
                                 			<li><a target="_blank" href="https://www.cortex-ag.com">Cortex AG Webseite</a></li>
                                 			<li><a target="_blank" href="https://docs.cortex-ag.com">Dokumentation der CortexDB</a></li>
                                         </ul>
@@ -274,7 +274,7 @@ Die <a target="_blank" href="https://www.sprind.org/">Sprin-D</a> (Bundesagentur
                                 <div class="footer-widget">
                                     <h3>Weitere Informationen</h3>
                                     <div class="textwidget">
-                                	<p>Die Pleodat GmbH ist ein Tochterunternehmen der Sprin-D (Agentur für Sprunginnovationen) und die Entwicklungsgesellschaft der Cortex AG.</p>
+                                	<p>Die Pleodat GmbH ist ein Tochterunternehmen der SPRIND (Agentur für Sprunginnovationen) und die Entwicklungsgesellschaft der Cortex AG.</p>
                                 	<br>
                                 	<p>Projektberatung und -Durchführung sowie die vertrieblichen Aktivitäten, Dokumentationen, Schulungen und weitere Kontakte übernimmt die Cortex AG.</p>
                             </div>
