--- a/imprint.html
+++ b/imprint.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
         <meta name=”robots” content=”noindex” />
         <meta name=”robots” content=”nofollow” />
-        <title>PleoDat - Impressum</title>
+        <title>Pleodat - Impressum</title>
         
         <!-- CSS -->
         <link rel="stylesheet" href="reset.css">
