--- a/index.html
+++ b/index.html
@@ -13,7 +13,13 @@
         <link rel="stylesheet" href="style.css">
         
         <link href='css/Font-SourceSansPro.css rel='stylesheet' type='text/css'>
-
+        
+        <script src="js/jquery.js"></script>
+		<script> 
+			$(function(){
+				$("#includedHeader").load("inc/header.html"); 
+			});
+		</script> 
 
         <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
            <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -24,6 +30,8 @@
         </head>
         <body id="home">
             <!-- Header -->
+            <div id="includedHeader"></div>
+            <!--
             <header id="top-header" class="header-home">
                 <div class="grid">
                     <div class="col-1-1">
@@ -43,6 +51,7 @@
                     </div>
                 </div>
             </header>
+            -->
             <!-- End Header -->
 
             <!-- Parallax Section -->
@@ -232,7 +241,6 @@
                 </div>
 
                 <!-- JS -->
-                <script src="js/jquery.js"></script>
                 <script src="js/main.js"></script>
                 <script src="js/smoothscroll.js"></script>
                 <script src="js/jquery.nav.js"></script>
