changed everything to includes

--- a/inc/header-jobs.html
+++ b/inc/header-jobs.html
@@ -9,9 +9,7 @@
                     <input type="checkbox" id="nav-button">
                     <label for="nav-button" onclick></label>
                     <ul class="nav-container">
-                        <li><a href="#home" class="current">Home</a></li>
-                        <li><a href="#goal">Unser Ziel</a></li>
-                        <li><a href="#jobs">freie Stellen</a></li>
+                        <li><a href="index.html" class="current">Home</a></li>
                     </ul>
                 </nav>
             </div>
