added download link to public key

--- a/inc/jobs-pleodat-contact.html
+++ b/inc/jobs-pleodat-contact.html
@@ -3,6 +3,7 @@
         <div class="content" >
 			<h3>Du möchtest die Daten-Engine für die Zukunft des Wissens entwickeln? </h3>
 			<p>Dann freuen wir uns über Deine Bewerbung in einer verschlüsselten eMail an jobs@pleodat.de</p>
+			<a href="/files/pleodat_jobs_pgp_public_key.asc" download>&#128274; Schlüssel Download</a>
 		</div>
 	</div>
 </div>
