fixed jquery; added pleodat values, changed offer and styles

--- a/inc/jobs-pleodat-contact.html
+++ b/inc/jobs-pleodat-contact.html
@@ -1,9 +1,14 @@
 <div class="wrap blog-grid grey">
 	<div class="grid grid-pad">
         <div class="content" >
+        	&nbsp;<br />
+        	&nbsp;<br />
+        	&nbsp;<br />
 			<h3>Du möchtest die Daten-Engine für die Zukunft des Wissens entwickeln? </h3>
 			<p>Dann freuen wir uns über Deine Bewerbung in einer verschlüsselten eMail an jobs@pleodat.de</p>
-			<a href="/files/pleodat_jobs_pgp_public_key.asc" download>&#128274; Schlüssel Download</a>
+			<a href="/files/pleodat_jobs_pgp_public_key.asc" download>&#128274; Download unseres PGP-Schlüssels</a>
+        	<br />
+        	<br />
 		</div>
 	</div>
 </div>
