--- a/jobs-pleodat-7.html
+++ b/jobs-pleodat-7.html
@@ -102,7 +102,7 @@
     	<div data-include="jobs-pleodat-additions"></div>
     	
     	<!-- CurveUp -->
-    	<svg class="curveUpColor" xmlns="http://www.w3.org/2000/svg" version="1.1" width="100%" height="100" viewBox="0 0 100 100" preserveAspectRatio="none"><path d="M0 100 C 20 0 50 0 100 100 Z"></path></svg>
+    	<svg class="curveUpColorBlack" style="background-color:#efefef" xmlns="http://www.w3.org/2000/svg" version="1.1" width="100%" height="100" viewBox="0 0 100 100" preserveAspectRatio="none"><path d="M0 100 C 20 0 50 0 100 100 Z"></path></svg>
     	       
     	<div data-include="jobs-pleodat-offer"></div>
    
