moved all sub files to /inc

--- a/inc/footer.html
+++ b/inc/footer.html
@@ -21,8 +21,8 @@
                     <h3>Sonstiges</h3>
                     <div class="fwidget">
                         <ul>
-                            <li><a href="gdpr.html">Datenschutz</a></li>
-                            <li><a href="imprint.html">Impressum</a></li>
+                            <li><a href="/inc/gdpr.html">Datenschutz</a></li>
+                            <li><a href="/inc/imprint.html">Impressum</a></li>
                         </ul>
                     </div>
                 </div>
