--- a/inc/jobs-pleodat-4-5.html
+++ b/inc/jobs-pleodat-4-5.html
@@ -8,18 +8,18 @@
         <title>Pleodat - Stellenausschreibung Scaling und Optimierung</title>
         
         <!-- CSS -->
-        <link rel="stylesheet" href="reset.css">
-        <link rel="stylesheet" href="simplegrid.css">
-        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="/reset.css">
+        <link rel="stylesheet" href="/simplegrid.css">
+        <link rel="stylesheet" href="/style.css">
         
-        <link href='css/Font-SourceSansPro.css rel='stylesheet' type='text/css'>
+        <link href='/css/Font-SourceSansPro.css rel='stylesheet' type='text/css'>
 
-        <script src="js/jquery.js"></script>
+        <script src="/js/jquery.js"></script>
 		<script>
 			$(function () {
 				var includes = $('[data-include]')
 				$.each(includes, function () {
-					var file = 'inc/' + $(this).data('include') + '.html'
+					var file = '/inc/' + $(this).data('include') + '.html'
 					$(this).load(file)
 				})
 			})
@@ -131,8 +131,8 @@
         </div>
 
         <!-- JS -->
-        <script src="js/main.js"></script>
-        <script src="js/smoothscroll.js"></script>
-        <script src="js/jquery.nav.js"></script>
+        <script src="/js/main.js"></script>
+        <script src="/js/smoothscroll.js"></script>
+        <script src="/js/jquery.nav.js"></script>
     </body>
 </html>
