--- a/inc/gdpr.html
+++ b/inc/gdpr.html
@@ -8,11 +8,11 @@
         <title>Pleodat - Datenschutzerklärung</title>
         
         <!-- CSS -->
-        <link rel="stylesheet" href="reset.css">
-        <link rel="stylesheet" href="simplegrid.css">
-        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="/reset.css">
+        <link rel="stylesheet" href="/simplegrid.css">
+        <link rel="stylesheet" href="/style.css">
         
-        <link href='css/Font-SourceSansPro.css rel='stylesheet' type='text/css'>
+        <link href='/css/Font-SourceSansPro.css rel='stylesheet' type='text/css'>
 
 
         <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
@@ -29,13 +29,13 @@
                     <div class="col-1-1">
                         <div class="content">
                             <div class="logo-wrap">
-                                <a href="#0" class="logo">https://www.pleodat.de</a>
+                                <a href="/index.html" class="logo">https://www.pleodat.de</a>
                             </div>
                             <nav class="navigation">
                                 <input type="checkbox" id="nav-button">
                                 <label for="nav-button" onclick></label>
                                 <ul class="nav-container">
-                                    <li><a href="index.html" class="current">Home</a></li>
+                                    <li><a href="/index.html" class="current">Home</a></li>
                                 </ul>
                             </nav>
                         </div>
@@ -250,8 +250,8 @@
                                     <h3>Sonstiges</h3>
                                     <div class="fwidget">
                                         <ul>
-                                            <li><a href="gdpr.html">Datenschutz</a></li>
-                                            <li><a href="imprint.html">Impressum</a></li>
+                                            <li><a href="/inc/gdpr.html">Datenschutz</a></li>
+                                            <li><a href="/inc/imprint.html">Impressum</a></li>
                                         </ul>
                                     </div>
                                 </div>
@@ -293,9 +293,9 @@
                 </div>
 
                 <!-- JS -->
-                <script src="js/jquery.js"></script>
-                <script src="js/main.js"></script>
-                <script src="js/smoothscroll.js"></script>
-                <script src="js/jquery.nav.js"></script>
+                <script src="/js/jquery.js"></script>
+                <script src="/js/main.js"></script>
+                <script src="/js/smoothscroll.js"></script>
+                <script src="/js/jquery.nav.js"></script>
             </body>
         </html>
