--- a/inc/header-jobs.html
+++ b/inc/header-jobs.html
@@ -3,13 +3,13 @@
         <div class="col-1-1">
             <div class="content">
                 <div class="logo-wrap">
-                    <a href="#0" class="logo">https://www.pleodat.de</a>
+                    <a href="../index.html" class="logo">https://www.pleodat.de</a>
                 </div>
                 <nav class="navigation">
                     <input type="checkbox" id="nav-button">
                     <label for="nav-button" onclick></label>
                     <ul class="nav-container">
-                        <li><a href="index.html" class="current">Home</a></li>
+                        <li><a href="../index.html" class="current">Home</a></li>
                     </ul>
                 </nav>
             </div>
