--- a/inc/imprint.html
+++ b/inc/imprint.html
@@ -8,11 +8,11 @@
         <title>Pleodat - Impressum</title>
         
         <!-- CSS -->
-        <link rel="stylesheet" href="reset.css">
-        <link rel="stylesheet" href="simplegrid.css">
-        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="/reset.css">
+        <link rel="stylesheet" href="/simplegrid.css">
+        <link rel="stylesheet" href="/style.css">
         
-        <link href='css/Font-SourceSansPro.css rel='stylesheet' type='text/css'>
+        <link href='/css/Font-SourceSansPro.css rel='stylesheet' type='text/css'>
 
 
         <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
@@ -29,13 +29,13 @@
                     <div class="col-1-1">
                         <div class="content">
                             <div class="logo-wrap">
-                                <a href="#0" class="logo">https://www.pleodat.de</a>
+                                <a href="/index.html" class="logo">https://www.pleodat.de</a>
                             </div>
                             <nav class="navigation">
                                 <input type="checkbox" id="nav-button">
                                 <label for="nav-button" onclick></label>
                                 <ul class="nav-container">
-                                    <li><a href="index.html" class="current">Home</a></li>
+                                    <li><a href="/index.html" class="current">Home</a></li>
                                 </ul>
                             </nav>
                         </div>
@@ -79,22 +79,21 @@
 							Unsere Geschäftsführung<br />
 							Frau Dr. Antonia Schmalz<br />
 							Herr Dr. Georg Loepp<br />
-							Vorsitzender des Aufsichtsrats<br />
-							xxxxxxxxxxxxxxxxx<br />
 							Handelsregister<br />
 							Amtsgericht Leipzig (HRB xxxxxxx)<br />
 							</p>
 							<p>
-							Umsatzsteuer-Identifikationsnummer nach § 27a Umsatzsteuergesetz<br />
-							DE328253854
-							</p>
-							<p>
-							FOTOS
+							FOTOS<br />
 							<a href="pexels.com">pexels.com</a>
 							</p>
 							<p>
-							Icons und Symbole
+							Icons und Symbole<br />
 							<a href="svgrepo.com">svgrepo.com</a>
+							</p>
+							<p>
+							(Basis)-Template der Webseite<br />
+							<a href="http://templatestock.co">templatestock.co</a><br />
+							<a href="http://creativecommons.org/licenses/by/3.0/">creative commons Lizenz</a>
 							</p>
 						</div>
 					</div class="content">
@@ -237,9 +236,9 @@
                 </div>
 
                 <!-- JS -->
-                <script src="js/jquery.js"></script>
-                <script src="js/main.js"></script>
-                <script src="js/smoothscroll.js"></script>
-                <script src="js/jquery.nav.js"></script>
+                <script src="/js/jquery.js"></script>
+                <script src="/js/main.js"></script>
+                <script src="/js/smoothscroll.js"></script>
+                <script src="/js/jquery.nav.js"></script>
             </body>
         </html>
