--- a/inc/jobs-pleodat-additions.html
+++ b/inc/jobs-pleodat-additions.html
@@ -6,7 +6,7 @@
 	    	<div class="col-1-4 service-box service-1" >
 		            <div class="content">
 		                <div class="service-icon">
-		                    <i class="circle-icon"><img src="images/teamwork.svg" alt="brain image" width="65" height="65"></i>                                
+		                    <i class="circle-icon"><img src="/images/teamwork.svg" alt="brain image" width="65" height="65"></i>                                
 		                </div>
 		                <div class="service-entry">
 		                    <h4>Erfahrung in der Arbeit mit und in Teams</h4>
@@ -18,7 +18,7 @@
 	    	<div class="col-1-4 service-box service-2" >
 		            <div class="content">
 		                <div class="service-icon">
-		                    <i class="circle-icon"><img src="images/task.svg" alt="brain image" width="65" height="65"></i></i>
+		                    <i class="circle-icon"><img src="/images/task.svg" alt="brain image" width="65" height="65"></i></i>
 		                </div>
 		                <div class="service-entry">
 		                    <h4>Freude an agilen Entwicklungsmethoden</h4>
@@ -29,7 +29,7 @@
 	    	<div class="col-1-4 service-box service-3">
 		            <div class="content">
 		                <div class="service-icon">
-		                    <i class="circle-icon"><img src="images/map.svg" alt="brain image" width="65" height="65"></i>
+		                    <i class="circle-icon"><img src="/images/map.svg" alt="brain image" width="65" height="65"></i>
 		                </div>
 		                <div class="service-entry">
 		                    <h4>lösungsorientiertes Arbeiten</h4>
@@ -40,7 +40,7 @@
 	    	<div class="col-1-4 service-box service-3">
 		            <div class="content">
 		                <div class="service-icon">
-		                    <i class="circle-icon"><img src="images/creativity.svg" alt="brain image" width="65" height="65"></i>
+		                    <i class="circle-icon"><img src="/images/creativity.svg" alt="brain image" width="65" height="65"></i>
 		                </div>
 		                <div class="service-entry">
 		                    <h4>Kreativität und Leidenschaft für Technologie</h4>
