--- a/inc_de/jobs-pleodat-9.1.html
+++ b/inc_de/jobs-pleodat-9.1.html
@@ -19,7 +19,7 @@
 			$(function () {
 				var includes = $('[data-include]')
 				$.each(includes, function () {
-					var file = '/inc/' + $(this).data('include') + '.html'
+					var file = '/inc_de/' + $(this).data('include') + '.html'
 					$(this).load(file)
 				})
 			})
