text changes for jobs

--- a/inc_de/jobs-pleodat-4-5.html
+++ b/inc_de/jobs-pleodat-4-5.html
@@ -59,12 +59,12 @@
 		<div class="wrap blog-grid grey">
 			<div class="grid grid-pad">
 				<div class="content">
-					<h2>Erweiterung der Scaling-Funktionen</h2>
+					<h3>Erweiterung der Scaling-Funktionen</h3>
 					<ul>						
 						<li>zum Ausbau als „Cloud Native Lösung" in Anlehnung an die CNCF </li>
 						<li>Integration von Funktionen zur Datenbank-Replikation </li>
 						<li>Konzeption und Entwicklung der Sharding-Funktionalität </li>
-						<li>Evaluierung der Möglichkeiten zum Stream Processing und Erweiterung der Datenbankfunktionalität um notwendige Funktionen</li>
+						<li>Analyse der Optionen zum Stream Processing und Erweiterung der Datenbankfunktionalität um notwendige Funktionen</li>
 					</ul>
 					
 					<h2>Optimierung der Funktionen zur Inbetriebnahme und der Administration</h2>
@@ -83,15 +83,14 @@
 		<div class="wrap blog-grid">
 			<div class="grid grid-pad">
 					<div class="content">
-					<h2>... womit Du uns überzeugen kannst </h2>
+					<h3>... womit Du uns überzeugen kannst </h3>
 						<ul>
-							<li>Erfahrung in der Softwareentwicklung mit C/C++, Java, JavaScript, HTML, CSS</li>
-							<li>Praxiserfahrung mit REST-APIs</li>
-							<li>Solide Kenntnisse in Swagger/OAS</li>
-							<li>Hilfreich sind Kennnisse in Electron, Vue.js, Apagee, weitere Framework<br/>und ggf. die Ideen hinter Low-Code/No-Code-Lösungen</li>
-							<li>Kenntnisse von Datenbanksystemen (insbesondere NoSQL)</li>
-							<li>Erfahrung in interdisziplinären Teams bei Kunden und Geschäftspartnern</li>
-							<li>Sehr gute Deutschkenntnisse (Muttersprache oder vergleichbar)</li>
+							<li>Fundierte Erfahrung in der Softwareentwicklung mit C/C++</li>
+							<li>Gute Kenntnisse von Datenbanksystemen (NoSQL und Sql)</li>
+							<li>Erfahrung in „cloud native“ Lösungen und Kenntnisse der CNCF-Konzepte</li>
+							<li>Praktische Erfahrung mit gängigen Backup-Konzepten</li>
+							<li>Replikation, Sharding und Fail-Over</li>
+							<li>Kenntnisse in der Administration von verteilten Systemen</li>
 						</ul>
 					</div>
 				</div>
