--- a/inc_de/jobs-pleodat-6.html
+++ b/inc_de/jobs-pleodat-6.html
@@ -59,17 +59,20 @@
 		<div class="wrap blog-grid grey">
 			<div class="grid grid-pad">
 				<div class="content">
-					<h2>GUI (Weiter-) Entwicklung</h2>
+					<h3>GUI (Weiter-) Entwicklung</h3>
 					<ul>
-						<li>Anpassung bestehender und Implementierung neuer Funktionen für eine unserer Anwendungen (Webanwendung)</li>
-						<li>Aufgreifen bestehender C/C++ Anwendungen zur Neukonzeptionierung und Implementierung als Web-Anwendungen und/oder als Electron-Anwendung</li>
+						<li>Anpassung bestehender und Implementierung neuer Funktionen für eine unserer Webanwendungen</li>
+						<li>Aufgreifen bestehender C/C++ Anwendungen zur Neukonzeptionierung <br />und Implementierung als Web-Anwendungen und/oder als Electron-Anwendung</li>
 						<li>Bereitstellung und Pflege der neuen Anwendungen als open source<br/>und Nachverfolgung der externen Fragen, Anforderungen und Pull Requests</li>
 						<li>API (Weiter-) Entwicklung</li>
-					<h2>API (Weiter-) Entwicklung</h2>
+					</ul>
+				</div>
+				<div class="content">
+					<h3>API (Weiter-) Entwicklung</h3>
 					<ul>
 						<li>Konzeption und Implementierung neuer API-Funktionen im Team</li>
 						<li>Dokumentation per Swagger/OAS und mit Hilfe interner Werkzeuge</li>
-						<li>Beisteuerung von Informationen für die Online-Dokumentation und Unterstützung externer Partner bei der API-Anwendung</li>
+						<li>Beisteuerung von Informationen für die Online-Dokumentation <br />und Unterstützung externer Partner bei der API-Anwendung</li>
 					</ul>
 				</div>
 			</div>
@@ -81,7 +84,7 @@
 		<div class="wrap blog-grid">
 			<div class="grid grid-pad">
 					<div class="content">
-					<h2>... womit Du uns überzeugen kannst </h2>
+					<h3>... womit Du uns überzeugen kannst </h3>
 						<ul>
 							<li>Erfahrung in der Softwareentwicklung mit C/C++, Java, JavaScript, HTML, CSS</li>
 							<li>Praxiserfahrung mit REST-APIs</li>
@@ -89,7 +92,6 @@
 							<li>Gute Kenntnisse von Datenbanksystemen (NoSQL ud SQL)</li>
 							<li>Hilfreich sind Kennnisse in Electron, Vue.js, Apagee, weitere Framework</li>
 							<li>und ggf. die Ideen hinter Low-Code/No-Code-Lösungen</li>
-							<li>Erfahrung in interdisziplinären Teams</li>
 						</ul>
 					</div>
 				</div>
