--- a/inc_de/jobs-pleodat-9.2.html
+++ b/inc_de/jobs-pleodat-9.2.html
@@ -41,7 +41,7 @@
             <div class="grid grid-pad">
                 <div class="col-1-1">
                      <div class="content content-header" >
-                        <h2>Welche Aufgaben als Softwarearchitekt übernimmst Du für unsere Entwicklung und Infrastruktur? </h2>
+                        <h2>Welche Aufgaben als Software System Architekt übernimmst Du für unsere Entwicklung und Infrastruktur? </h2>
                     </div>
                 </div>
             </div>
@@ -59,9 +59,9 @@
 		<div class="wrap blog-grid grey">
 			<div class="grid grid-pad">
 				<div class="content">
-					<h2>Weiterführung der Softwarearchitektur für unsere Entwicklung</h2>
+					<h3>Weiterführung der Softwarearchitektur für unsere Entwicklung</h3>
 					<ul>
-						<li>Modulare Architektur für C/C++ Datenbankserver</li>
+						<li>Modularisierung der Datenbankserver-Architektur (C/C++ Implementierung)</li>
 						<li>Interner Berater und Sparringspartner für die Umsetzung des Datenbank-Scaling („cloud native")</li>
 						<li>Abstimmung mit den Systemarchitekten zur Konzeption, Bereitstellung und Betrieb einer sicheren und zuverlässigen Infrastruktur für DevOP, Continous Integration / Continous Delivery</li>
 						<li>Konzeption, Prozessdefinition, Auswahl von Werkzeugen, Umsetzung und Betrieb von Server-Diensten für unsere Software-Entwicklung (u.a. Software-Testing, Softwarequalität, Sicherheit)</li>
@@ -77,7 +77,7 @@
 		<div class="wrap blog-grid">
 			<div class="grid grid-pad">
 					<div class="content">
-					<h2>... womit Du uns überzeugen kannst </h2>
+					<h3>... womit Du uns überzeugen kannst </h3>
 						<ul>
 							<li>Fundierte Kenntnisse und Erfahrung in der Softwarearchitektur</li>
 							<li>Fundierte Erfahrung in der Softwareentwicklung mit C / C++</li>
