--- a/inc_de/jobs-pleodat-additions.html
+++ b/inc_de/jobs-pleodat-additions.html
@@ -1,7 +1,7 @@
 <div class="wrap blog-grid grey">
 	<div class="grid grid-pad">
 			<div class="content">
-	    	<h2>...was Du ansonsten noch mitbringen könntest</h2>
+	    	<h3>...was Du ansonsten noch mitbringen könntest</h3>
 	    	
 	    	<div class="col-1-4 service-box service-1" >
 		            <div class="content">
@@ -9,7 +9,7 @@
 		                    <i class="circle-icon"><img src="/images/teamwork.svg" alt="brain image" width="65" height="65"></i>                                
 		                </div>
 		                <div class="service-entry">
-		                    <h4>Erfahrung in der Arbeit mit und in Teams</h4>
+		                    <h4>Spaß an der Arbeit in und mit einem interdisziplinären, internationalen Team </h4>
 		                    
 		                </div>
 		            </div>
@@ -32,7 +32,7 @@
 		                    <i class="circle-icon"><img src="/images/map.svg" alt="brain image" width="65" height="65"></i>
 		                </div>
 		                <div class="service-entry">
-		                    <h4>lösungsorientiertes Arbeiten</h4>
+		                    <h4>Lösungsorientiertes Arbeiten</h4>
 		                </div>
 		            </div>
 		        </div>
