--- a/inc_de/jobs-pleodat-offer.html
+++ b/inc_de/jobs-pleodat-offer.html
@@ -5,7 +5,7 @@
 	<div class="grid grid-pad">
         <div class="content" >
     			<section class="grid grid-pad">
-				<h2 class="pleodat-offer-red">Was kannst Du von <br /> Pleodat erwarten?</h2>
+				<h3 class="pleodat-offer-red">Was kannst Du von Pleodat erwarten?</h3>
     			
     				<div class="col-1-4 service-box service-1" >
     					<div class="service-entry">
