--- a/inc_de/jobs-pleodat-teaser.html
+++ b/inc_de/jobs-pleodat-teaser.html
@@ -2,10 +2,14 @@
 	<div class="grid grid-pad">
 		<div class="content">
 			<div class="content" style="padding-left: 15%; padding-right: 15%; padding-bottom: 4em;padding-top: 4em;">
-	    		<h3>Wir suchen Dich, um aus Daten die Zukunft des Wissens zu bauen und unsere digitale Gesellschaft sicherer, vertrauensvoller und transparenter zu gestalten.</h3>
-				<p>Mit diesem Ziel wurde die Pleodat GmbH als Tochterunternehmen der <a target="_blank" href="https://www.sprind.org/">SPRIND</a> gegründet, um eine völlig neuartige Informationsdatenbank zu entwickeln. Hierfür dient uns das innovative Datenbanksystem <a target="_blank" href="https://www.cortex-ag.com/">CortexDB</a> als Basis, an dem Du weiterentwickeln und Deine Erfahrung und Ideen einbringen wirst.</p>
-				<p>Die <a target="_blank" href="https://www.sprind.org/">SPRIND</a> (Bundesagentur für Sprunginnovationen) hat das Ziel, von Deutschland aus neue Sprunginnovationen für Produkte, Dienstleistungen und Systeme zu schaffen, die unser aller Leben spürbar und nachhaltig besser machen. Dazu verbinden wir Neudenker:innen aus Wissenschaft und Wirtschaft, Menschen mit herausragenden Ideen, besonderer Fachexpertise und Leidenschaft.</p>
+			<p>Hast Du Dich schon immer gefragt, wieso unser Gehirn problemlos Daten zu Informationen verarbeiten kann – die digitale Informationsverarbeitung mit Datenbanken aber schwerfällig und nicht intuitiv ist? Möchtest Du dabei sein, wenn eine neuartige Informationsbank mit kognitiven Ansätzen die Welt der Datenhaltung auf den Kopf stellt?</p>
+	    		<h3>Dann suchen wir Dich, um aus Daten die Zukunft des Wissens zu bauen und unsere digitale Gesellschaft sicherer, vertrauensvoller und transparenter zu gestalten.</h3>
+				<p>Mit diesem Ziel wurde die Pleodat GmbH als Tochterunternehmen der <a target="_blank" href="https://www.sprind.org/">SPRIND</a> (Bundesagentur für Sprunginnovationen) gegründet. Als Ausgangspunkt dient uns das innovative Datenbanksystem <a target="_blank" href="https://www.cortex-ag.com/">CortexDB</a>. Einen kleinen Einblick in die Idee und die Personen dahinter findest Du <a href="https://www.sprind.org/de/projekte/cortex-datenbank/" target="_blank">hier</a>.
+				
+				<p>In mehreren agilen Teams wollen wir das existierende System so weiterentwickeln, dass der geniale, kognitive Ansatz einen breiten Markt erreichen kann. Hierfür brauchen wir Dich, Deine Erfahrung und Deine Ideen!</p>
+				<p>Die <a target="_blank" href="https://www.sprind.org/">SPRIND</a> hat das Ziel, von Deutschland aus neue Sprunginnovationen für Produkte, Dienstleistungen und Systeme zu schaffen, die unser aller Leben spürbar und nachhaltig besser machen. Dazu verbinden wir Neudenker:innen aus Wissenschaft und Wirtschaft, Menschen mit herausragenden Ideen, besonderer Fachexpertise und Leidenschaft.</p>
 			</div>
 		</div>
 	</div>
 </div>
+
