fixed jobs texts

--- a/inc_de/jobs-pleodat-4-5.html
+++ b/inc_de/jobs-pleodat-4-5.html
@@ -41,7 +41,7 @@
             <div class="grid grid-pad">
                 <div class="col-1-1">
                      <div class="content content-header" >
-                        <h2>In der C/C++ Entwicklung für Scaling und Optimierung unseres Datenbankprodukts</h2>
+                        <h2>Welche Aufgaben übernimmst Du<br/>In der C/C++ Entwicklung für Scaling und Optimierung unseres Datenbankprodukts</h2>
                     </div>
                 </div>
             </div>
@@ -61,17 +61,17 @@
 				<div class="content">
 					<h3>Erweiterung der Scaling-Funktionen</h3>
 					<ul>						
-						<li>zum Ausbau als „Cloud Native Lösung" in Anlehnung an die CNCF </li>
 						<li>Integration von Funktionen zur Datenbank-Replikation </li>
 						<li>Konzeption und Entwicklung der Sharding-Funktionalität </li>
-						<li>Analyse der Optionen zum Stream Processing und Erweiterung der Datenbankfunktionalität um notwendige Funktionen</li>
+						<li>Analyse der Optionen zum Stream Processing und Implementierung entsprechender Funktionen</li>
+						<li>Evaluierung, Optimierung und Implementierung der Backup-Funktionen (inkrementelle Backups, Fail Over, u.a.)</li>
 					</ul>
 					
-					<h2>Optimierung der Funktionen zur Inbetriebnahme und der Administration</h2>
-					<ul>	
+					<h3>Optimierung bestimmter Datenbank-Funktionen</h3>
+					<ul>
+						<li>zum Ausbau als „Cloud Native Lösung" in Anlehnung an die CNCF </li>
 						<li>Evaluierung, Konzeption und Implementierung der Mandantenfähigkeit </li>
 						<li>Optimierung der Transaktionsfunktionen </li>
-						<li>Evaluierung, Optimierung und Implementierung der Backup-Funktionen (inkrementelle Backups, Fail Over, u.a.)</li>
 					</ul>
 				</div>
 			</div>
