--- a/inc_de/jobs-pleodat-7.html
+++ b/inc_de/jobs-pleodat-7.html
@@ -41,7 +41,7 @@
             <div class="grid grid-pad">
                 <div class="col-1-1">
                      <div class="content content-header" >
-                        <h2>Welche Aufgaben in der C/C++ Entwicklung übernimmst Du für die Entwicklung von Data Mining Funktionen, Data Analyse und maschinellem Lernen?</h2>
+                        <h2>Welche Aufgaben in der C/C++ Entwicklung übernimmst  Du<br />als Data Mining Experte<br />in der Entwicklung von Data Mining Funktionen, Data Analyse und maschinellem Lernen?</h2>
                     </div>
                 </div>
             </div>
