--- a/inc_de/jobs-pleodat-9.2.html
+++ b/inc_de/jobs-pleodat-9.2.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
         <meta name=”robots” content=”noindex” />
         <meta name=”robots” content=”nofollow” />
-        <title>Pleodat - Stellenausschreibung Softwarearchitektur</title>
+        <title>Pleodat - Stellenausschreibung Software System Architektur</title>
         
         <!-- CSS -->
         <link rel="stylesheet" href="/reset.css">
@@ -41,7 +41,7 @@
             <div class="grid grid-pad">
                 <div class="col-1-1">
                      <div class="content content-header" >
-                        <h2>Welche Aufgaben als Software System Architekt übernimmst Du für unsere Entwicklung und Infrastruktur? </h2>
+                        <h2>Welche Aufgaben als <br /> Software System Architekt <br /> übernimmst Du für unsere <br /> Entwicklung und Infrastruktur? </h2>
                     </div>
                 </div>
             </div>
