--- a/inc_de/jobs-pleodat-9.1.html
+++ b/inc_de/jobs-pleodat-9.1.html
@@ -41,7 +41,7 @@
             <div class="grid grid-pad">
                 <div class="col-1-1">
                      <div class="content content-header" >
-                        <h2>Welche Aufgaben als Systemarchitekt übernimmst Du für unsere IT-Infrastruktur?</h2>
+                        <h2>Welche Aufgaben als Systemarchitekt<br />übernimmst Du für unsere IT-Infrastruktur?</h2>
                     </div>
                 </div>
             </div>
