added logo and new background image

--- a/inc_de/gdpr.html
+++ b/inc_de/gdpr.html
@@ -94,9 +94,9 @@
 							<p>
 							Verantwortlich für die Verarbeitung von personenbezogenen Daten auf dieser Webseite ist (vgl. Impressum):
 							<br /><br />
-							SPRIND GmbH <br/> c/o Pleodat GmbH<br/>Lagerhofstr. 4<br/>04103 Leipzig<br/><br/>
+							Pleodat GmbH<br/>Lagerhofstr. 4<br/>04103 Leipzig<br/><br/>
 							Geschäftsführung: Frau Antonia Schmalz und Herr Georg Loepp<br/><br/>
-							E-Mail: info@pleodat.de
+							E-Mail: datenschutz@pleodat.de
 							</p>
 						</div>
 					</div>
