--- a/inc_de/teaser.html
+++ b/inc_de/teaser.html
@@ -2,6 +2,7 @@
     <div class="grid grid-pad">
         <div class="col-1-1">
              <div class="content content-header" >
+             	<img src="images/PleodatLogo.png">
                 <h2>Wir bauen aus Daten die Zukunft des Wissens.</h2>
 				<h3>Damit gestalten wir unsere digitale Gesellschaft.</h3>
 				<h3>Sicher, vertrauensvoll und transparent.</h3>
