added hrb number

--- a/inc_de/imprint.html
+++ b/inc_de/imprint.html
@@ -89,7 +89,7 @@
 							Frau Dr. Antonia Schmalz<br />
 							Herr Dr. Georg Loepp<br />
 							Handelsregister<br />
-							Amtsgericht Leipzig (HRB xxxxxxx)<br />
+							Amtsgericht Leipzig (HRB 40511)<br />
 							</p>
 							<p>
 							FOTOS<br />
