--- a/inc_de/imprint.html
+++ b/inc_de/imprint.html
@@ -90,6 +90,7 @@
 							Herr Dr. Georg Loepp<br />
 							Handelsregister<br />
 							Amtsgericht Leipzig (HRB 40511)<br />
+							USt.-ID-Nr.: DE354925472
 							</p>
 							<p>
 							FOTOS<br />
