added new job description

--- a/inc_de/imprint.html
+++ b/inc_de/imprint.html
@@ -101,6 +101,10 @@
 							<a href="svgrepo.com">svgrepo.com</a>
 							</p>
 							<p>
+							Der Ovalia Egg Chair (siehe Stellenausschreibungen)<br />wurde vom dänischen Industriedesigner<br />Henrik Thor-Larsen entworfen und erstmals 1968 vorgestellt.<br /><br />
+							Die Personen wurden durch eine KI von der Seite <a href="https://generated.photos/">generated.photos</a> generiert.
+							</p>
+							<p>
 							(Basis)-Template der Webseite<br />
 							<a href="http://templatestock.co">templatestock.co</a><br />
 							<a href="http://creativecommons.org/licenses/by/3.0/">creative commons Lizenz</a>
