--- a/inc_de/jobs-pleodat-values.html
+++ b/inc_de/jobs-pleodat-values.html
@@ -4,16 +4,16 @@
 			<br />
 			<br />
 			<br />
-			<h3>Unsere Werte</h3>
+			<h3><span style="color:#f00">Unsere Werte</span></h3>
 			<div class="col-1-2 service-box" >
-				<h5>Es gibt keine Alternative zu Qualität</h5>
-				<h5>Was wir versprechen, halten wir ein</h5>
-				<h5>Der Kunde ist die wichtigste Person im Haus</h5>
+				<h4>Es gibt keine Alternative zu Qualität</h4>
+				<h4>Was wir versprechen, halten wir ein</h4>
+				<h4>Der Kunde ist die wichtigste Person im Haus</h4>
 			</div>
 			<div class="col-1-2 service-box" >
-				<h5>Die Aufgabe steht im Vordergrund, nicht die Person</h5>
-				<h5>Wir setzen auf die Mitwirkung aller Mitarbeiter</h5>
-				<h5>Fehler werden toleriert, aber nicht wiederholt</h5>
+				<h4>Die Aufgabe steht im Vordergrund, nicht die Person</h4>
+				<h4>Wir setzen auf die Mitwirkung aller Mitarbeiter</h4>
+				<h4>Fehler werden toleriert, aber nicht wiederholt</h4>
 			</div>
 		</div>
 	</div>
