removed holiday note

--- a/inc_de/jobs-details.html
+++ b/inc_de/jobs-details.html
@@ -118,7 +118,7 @@
 				    <div class="content invert">
 				        <h4>03</h4>
 						<h4><span style="color:#f00">30 Tage bezahlter Urlaub</span></h4>
-						<p>Wir alle benötigen Zeit, um unsere Batterien wieder aufzuladen. Bei uns hast Du 30 Tage bezahlten Urlaub. Heiligabend und Silvester zählen dabei jeweils nur als halbe Urlaubstage.</p>
+						<p>Wir alle benötigen Zeit, um unsere Batterien wieder aufzuladen. Bei uns hast Du 30 Tage bezahlten Urlaub.</p>
 				    </div>
 				</div>
 				
