--- a/inc_de/jobs-details.html
+++ b/inc_de/jobs-details.html
@@ -57,9 +57,9 @@
 				        <div class="service-icon">
 				        <h3>
 						Wir suchen nicht einfach nur<br />
-						die&nbsp;Besten, der&nbsp;Besten, der&nbsp;Besten.<br /><br />
+						die&nbsp;Besten der&nbsp;Besten der&nbsp;Besten.<br /><br />
 						
-						Wir suchen Kollegen,<br />
+						Wir suchen Kollegen<br />
 						die auch mal anders denken.<br /><br />
 						Wir suchen die Rebellen,<br />
 						die Idealisten, die Visionäre.<br /><br />
