typo fixed; remove link to job descriptions

--- a/inc_de/goal-box-1.html
+++ b/inc_de/goal-box-1.html
@@ -4,7 +4,7 @@
     </div>
     <div class="service-entry">
         <h3>schemaloser Datenspeicher</h3>
-        <p>Wir wollen einen universellen Datenspeicher bieten, der Datensilos überflüssig macht und der so arbeitet, wie unser Gehirn.</p>
+        <p>Wir wollen einen universellen Datenspeicher bieten, der Datensilos überflüssig macht und der so arbeitet wie unser Gehirn.</p>
         
     </div>
 </div>
