--- a/inc_de/goal-box-2.html
+++ b/inc_de/goal-box-2.html
@@ -3,7 +3,7 @@
         <i class="circle-icon"><img src="images/rings.svg" alt="brain image" width="65" height="65"></i></i>
     </div>
     <div class="service-entry">
-        <h3>Verarbeitung und -Verknüpfung</h3>
+        <h3>Verarbeitung und Verknüpfung</h3>
         <p>Wir wollen Abfragen ohne tiefes Expertenwissen ermöglichen und das in den Daten enthaltene Wissen jedermann zugänglich machen.</p>
         
     </div>
