--- a/inc_de/imprint.html
+++ b/inc_de/imprint.html
@@ -86,8 +86,8 @@
 							</p>
 							<p>
 							Unsere Geschäftsführung<br />
-							Frau Dr. Antonia Schmalz<br />
 							Herr Dr. Georg Loepp<br />
+							Herr Sven Kreigenfeld<br />
 							Handelsregister<br />
 							Amtsgericht Leipzig (HRB 40511)<br />
 							USt.-ID-Nr.: DE354925472
