fixed typos and content

--- a/inc_de/footer.html
+++ b/inc_de/footer.html
@@ -9,7 +9,7 @@
                         <ul>
                         	<li><a target="_blank" href="https://www.sprind.org/de/projekte/cortex-datenbank/">SPRIND Projektseite</a></li>
                 			<li><a target="_blank" href="https://www.cortex-ag.com">Cortex AG Webseite</a></li>
-                			<li><a target="_blank" href="https://docs.cortex-ag.com">Dokumentation der CortexDB</a></li>
+                			<li><a target="_blank" href="https://docs.cortex-ag.com">Dokumentation der CortexEngine</a></li>
                         </ul>
                     </div>
                 </div>
@@ -33,9 +33,9 @@
                 <div class="footer-widget">
                     <h3>Weitere Informationen</h3>
                     <div class="textwidget">
-                	<p>Die Pleodat GmbH ist ein Tochterunternehmen der SPRIND (Agentur für Sprunginnovationen) und die Entwicklungsgesellschaft der Cortex AG.</p>
+                	<p>Die Pleodat GmbH ist ein Tochterunternehmen der SPRIND (Bundesagentur für Sprunginnovationen) und die Entwicklungsgesellschaft der Cortex AG.</p>
                 	<br>
-                	<p>Projektberatung und -Durchführung sowie die vertrieblichen Aktivitäten, Dokumentationen, Schulungen und weitere Kontakte übernimmt die Cortex AG.</p>
+                	<p>Projektberatung und -durchführung sowie die vertrieblichen Aktivitäten, Dokumentationen, Schulungen und weitere Kontakte übernimmt die Cortex AG.</p>
             </div>
                 </div>
             </div>
