--- a/inc_de/goal-box-1.html
+++ b/inc_de/goal-box-1.html
@@ -3,8 +3,8 @@
         <i class="circle-icon"><img src="images/brain.svg" alt="brain image" width="65" height="65"></i>                                
     </div>
     <div class="service-entry">
-        <h3>schemaloser Datenspeicher</h3>
-        <p>Wir wollen einen universellen Datenspeicher bieten, der Datensilos überflüssig macht und der so arbeitet wie unser Gehirn.</p>
+        <h3>Schemaloser Datenspeicher</h3>
+        <p>Wir wollen einen universellen Datenspeicher bieten, der Datensilos überflüssig macht und so arbeitet wie unser Gehirn.</p>
         
     </div>
 </div>
