--- a/inc_de/goal-box-5.html
+++ b/inc_de/goal-box-5.html
@@ -4,7 +4,7 @@
     </div>
     <div class="service-entry">
         <h3>Die eine Lösung</h3>
-        <p>Wir wollen die eine Lösung bieten, wenn Daten vorhanden sind, aber Informationen und Wissen benötigt werden</p>
+        <p>Wir wollen die eine Lösung bieten, wenn Daten vorhanden sind, aber Informationen und Wissen benötigt werden.</p>
         
     </div>
 </div>
