--- a/inc_de/goal-box-6.html
+++ b/inc_de/goal-box-6.html
@@ -4,7 +4,7 @@
     </div>
     <div class="service-entry">
         <h3>Universeller Speicher</h3>
-        <p>Wir wollen Daten so speichern, wir in unserem Gehirn: Für operative und analytische Daten an einer Stelle mit universellem Zugriff.</p>
+        <p>Wir wollen Daten so speichern, wie in unserem Gehirn: für operative und analytische Daten an einer Stelle mit universellem Zugriff.</p>
         
     </div>
 </div>
