--- a/inc_de/jobs-teaser.html
+++ b/inc_de/jobs-teaser.html
@@ -1,4 +1,4 @@
 <h2>Andere reden über die Zukunft.<br />Wir bauen sie!</h2>
 <p>Wir suchen Dich, um aus Daten die Zukunft des Wissens zu bauen und unsere digitale Gesellschaft sicherer, vertrauensvoller und transparenter zu gestalten.<br/><br/>
-Mit diesem Ziel wurde die Pleodat GmbH als Tochterunternehmen der <a target="_blank" href="https://www.sprind.org/">SPRIND</a> gegründet, um eine völlig neuartige Informationsdatenbank zu entwickeln. Hierfür dient uns das innovative Datenbanksystem <a target="_blank" href="https://www.cortex-ag.com/">CortexDB</a> als Basis, an dem Du weiterentwickeln und Deine Erfahrung und Ideen einbringen wirst.<br/><br/>
+Mit diesem Ziel wurde die Pleodat GmbH als Tochterunternehmen der <a target="_blank" href="https://www.sprind.org/">SPRIND</a> gegründet, um ein völlig neuartiges Informationsmanagementsystem zu entwickeln. Hierfür dient uns die innovative <a target="_blank" href="https://www.cortex-ag.com/">CortexEngine</a> als Basis, an dem Du weiterentwickeln und Deine Erfahrung und Ideen einbringen kannst.<br/><br/>
 </p>
