--- a/inc_de/footer.html
+++ b/inc_de/footer.html
@@ -33,9 +33,10 @@
                 <div class="footer-widget">
                     <h3>Weitere Informationen</h3>
                     <div class="textwidget">
-                	<p>Die Pleodat GmbH ist ein Tochterunternehmen der SPRIND (Bundesagentur für Sprunginnovationen) und die Entwicklungsgesellschaft der Cortex AG.</p>
+                	<p>Die Pleodat GmbH ist ein Tochterunternehmen der SPRIND (Bundesagentur für Sprunginnovationen) und in Entwicklungskooperation mit der Cortex AG.</p>
                 	<br>
-                	<p>Projektberatung und -durchführung sowie die vertrieblichen Aktivitäten, Dokumentationen, Schulungen und weitere Kontakte übernimmt die Cortex AG.</p>
+                    <p>Bei Fragen zur Entwicklung, Forschung oder Forschungkooperationen im öffentlichen Bereich wenden Sie sich bitte direkt an die Pleodat GmbH.</p
+                	<p>Bei Fragen zur Projektberatung oder -durchführung sowie Lizenzen, Dokumentationen und Schulungen wenden Sie sich bitte an die Cortex AG.</p>
             </div>
                 </div>
             </div>
