--- a/inc_de/imprint.html
+++ b/inc_de/imprint.html
@@ -80,7 +80,7 @@
 							<p>
 							Pleodat GmbH<br />
 							Lagerhofstr. 4<br />
-							04103 Leipzig<br />
+							D-04103 Leipzig<br />
 							<br /><br />
 							info@pleodat.de
 							</p>
