--- a/inc_de/footer.html
+++ b/inc_de/footer.html
@@ -9,7 +9,7 @@
                         <ul>
                         	<li><a target="_blank" href="https://www.sprind.org/de/projekte/cortex-datenbank/">SPRIND Projektseite</a></li>
                 			<li><a target="_blank" href="https://www.cortex-ag.com">Cortex AG Webseite</a></li>
-                			<li><a target="_blank" href="https://docs.cortex-ag.com">Dokumentation der CortexEngine</a></li>
+                			<li><a target="_blank" href="https://docs.cortex-ag.com">Dokumentation der CortexInformationPlatform</a></li>
                         </ul>
                     </div>
                 </div>
