--- a/inc_de/goal-teaser.html
+++ b/inc_de/goal-teaser.html
@@ -1,3 +1,3 @@
 <h2>Unser Ziel</h2>
-<h3>Die Erweiterung der CortexEngine zu einer Wissensmaschine</h3>
-<p>Die CortexEngine wird eine neuartige Maschine für den Umgang mit Daten. Sie wurde von der effizienten Arbeitsweise des menschlichen Gehirns inspiriert. Daher legt die CortexEngine Daten nicht nur einfach ab, sondern speichert sie im Zusammenhang mit ihrem jeweiligen Kontext. Das bedeutet, dass Daten zu Informationen werden und eine neue Art der Datenabfrage auf dieser leicht zugänglichen Ebene möglich wird.</p>
+<h3>Die Erweiterung der CortexInformationPlatform zu einer Wissensplatttform</h3>
+<p>Der Kern die CortexEngine wird eine neuartige Basis für den Umgang mit Informationen. Sie wurde von der effizienten Arbeitsweise des menschlichen Gehirns inspiriert. Daher legt die CortexEngine Daten nicht nur einfach ab, sondern speichert sie im Zusammenhang mit ihrem jeweiligen Kontext. Das bedeutet, dass Daten nachvollziehbar zu Informationen werden und eine neue Art der Datenabfrage auf dieser leicht zugänglichen Ebene möglich wird. Hierdurch wollen wir im Zusammenspiel mit dem Menschen echtes Wissen erzeugen und bewahren.</p>
