--- a/inc_de/jobs-teaser.html
+++ b/inc_de/jobs-teaser.html
@@ -1,4 +1,6 @@
 <h2>Andere reden über die Zukunft.<br />Wir bauen sie!</h2>
+<p>Hast Du Dich schon immer gefragt, wieso unser Gehirn problemlos Daten zu Informationen verarbeiten kann – die digitale Informationsverarbeitung mit klassischen Systemen aber schwerfällig und nicht intuitiv ist? Möchtest Du dabei sein, wenn ein neuartiges Informationssystem mit kognitiven Ansätzen die Welt der Datenhaltung auf den Kopf stellt?</p>
+<p>Dann melde Dich bitte bei uns.</p>
 <p>Wir suchen Dich, um aus Daten die Zukunft des Wissens zu bauen und unsere digitale Gesellschaft sicherer, vertrauensvoller und transparenter zu gestalten.<br/><br/>
-Mit diesem Ziel wurde die Pleodat GmbH als Tochterunternehmen der <a target="_blank" href="https://www.sprind.org/">SPRIND</a> gegründet, um ein völlig neuartiges Informationsmanagementsystem zu entwickeln. Hierfür dient uns die innovative <a target="_blank" href="https://www.cortex-ag.com/">CortexEngine</a> als Basis, an dem Du weiterentwickeln und Deine Erfahrung und Ideen einbringen kannst.<br/><br/>
+Mit diesem Ziel wurde die Pleodat GmbH als Tochterunternehmen der <a target="_blank" href="https://www.sprind.org/">SPRIND</a> gegründet, um ein völlig neuartiges Kontext Informationsmanagementsystem zu entwickeln. Hierfür dient uns die innovative <a target="_blank" href="https://www.cortex-ag.com/">CortexEngine</a> als Basis, an der Du weiterentwickeln und Deine Erfahrung und Ideen einbringen kannst.<br/><br/>
 </p>
