--- a/inc_de/jobs-pleodat-9.1.html
+++ b/inc_de/jobs-pleodat-9.1.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
         <meta name=”robots” content=”noindex” />
         <meta name=”robots” content=”nofollow” />
-        <title>Pleodat - Stellenausschreibung Systemarchitekt</title>
+        <title>Pleodat - Stellenausschreibung Senior Software Tester (m/w/d) </title>
         
         <!-- CSS -->
         <link rel="stylesheet" href="/reset.css">
@@ -41,7 +41,7 @@
             <div class="grid grid-pad">
                 <div class="col-1-1">
                      <div class="content content-header" >
-                        <h2>Welche Aufgaben als Systemarchitekt<br />übernimmst Du für unsere IT-Infrastruktur?</h2>
+                        <h2>Welche Aufgaben als Software Tester<br />übernimmst Du für uns?</h2>
                     </div>
                 </div>
             </div>
@@ -59,16 +59,13 @@
 		<div class="wrap blog-grid grey">
 			<div class="grid grid-pad">
 				<div class="content">
-					<h3>Weiterführung sowie Konzeption und Betrieb der IT-Infrastruktur</h3>
+					<h3>Unterstützung bei der Umsetzung unserer agilen End-to-End Test-Strategie</h3>
 						<ul>
-							<li>Bereitstellung und Sicherstellung des IT-Betriebes (Cloud und on-premise)<br />mit Servern unter Linux, Windows und MacOS</li>
-							<li>Entwurf der Systemarchitektur</li>
-							<li>Beschaffung, Bereitstellung und Verwaltung von Arbeitsplätzen mit Apple-Hardware (Mac OS und iOS)</li>
-							<li>Beschaffung, Bereitstellung und Verwaltung von Arbeitsplätzen und Servern mit unterschiedlichen Betriebssystemen</li>
-							<li>Anbindung und Zugriffssicherung externer Dienste<br/>(z.B. VoIP, Mail, Web, Projektmanagement, Scrum/Kanban-Tools uvm.)</li>
-							<li>Konzeption, Bereitstellung und Betrieb einer sicheren und zuverlässigen Infrastruktur<br/>für Continous Integration / Continous Delivery</li>
-							<li>Software- und Asset-Management sowie MDM</li>
-							<li>Unterstützung als Sparringspartner für alle Kollegen und ggf. externe Partner</li>
+							<li>Entwicklung von agilen Testszenarien</li>
+							<li>Weiterentwicklung der kompletten automatischen Test-Pipeline</li>
+							<li>Umsetzen von Unit-, Integrations-und User Acceptance Tests in der Zusammenarbeit mit den Entwicklern und Dev-Ops Verantwortlichen</li>
+							<li>Unterstützung bei vollautomatischen Deployments – lokal – On-Premise und in verteilten Umgebungen bis hin zur Public Cloud</li>
+							<li>Zusammenarbeit mit Kunden und Partnern</li>
 						</ul>
 					</div>
 				</div>
@@ -83,12 +80,13 @@
 					<div class="content">
 					<h3>... womit Du uns überzeugen kannst </h3>
 					<ul>
-						<li>Fundierte Erfahrung in der Administration von Servern und Arbeitsplätzen</li>
-						<li>Gute Kenntnisse und Erfahrung in der Konzeption von IT-Infrastrukturen</li>
-						<li>Gute Kenntnisse im Aufbau und Betrieb von Lösungen für Continous Integration / Continous Delivery</li>
-						<li>Kenntnisse von Datenbanksystemen (insbesondere NoSQL)</li>
-						<li>Erfahrung in interdisziplinären Teams bei Kunden und Geschäftspartnern</li>
-						<li>Sehr gute Deutschkenntnisse (Muttersprache oder vergleichbar)</li>
+						<li>Fundierte Erfahrungen in der Softwaretest-Automatisierung unter Anwendung von Jenkins, TeamCity oder vergleichbaren Werkzeugen</li>
+						<li>Sehr gute Erfahrungen im Test Driven Development</li>
+						<li>Sehr gute Anwendungskenntnisse von Selenium oder der Automatisierung von UATs mit vergleichbaren Werkzeugen</li>
+						<li>Grundlegende Prinzipien und Praktiken des agilen Testens</li>
+						<li>Gute Kenntnis von agilen Methoden in der modernen Softwareentwicklung</li>
+						<li>Zertifizierung als Agile Tester - ISTQB
+						<li>Fließende Deutsch und Englischkenntnisse</li>
 					</ul>
 				</div>
 			</div>
