--- a/inc_de/jobs-pleodat-9.1.html
+++ b/inc_de/jobs-pleodat-9.1.html
@@ -82,10 +82,10 @@
 					<ul>
 						<li>Fundierte Erfahrungen in der Softwaretest-Automatisierung unter Anwendung von Jenkins, TeamCity oder vergleichbaren Werkzeugen</li>
 						<li>Sehr gute Erfahrungen im Test Driven Development</li>
-						<li>Sehr gute Anwendungskenntnisse von Selenium oder der Automatisierung von UATs mit vergleichbaren Werkzeugen</li>
+						<li>Sehr gute Anwendungskenntnisse von Selenium, Appium oder der Automatisierung von UATs mit vergleichbaren Werkzeugen</li>
 						<li>Grundlegende Prinzipien und Praktiken des agilen Testens</li>
 						<li>Gute Kenntnis von agilen Methoden in der modernen Softwareentwicklung</li>
-						<li>Zertifizierung als Agile Tester - ISTQB
+						<li>ISTQB Zertifizierung wünschenswert</li>
 						<li>Fließende Deutsch und Englischkenntnisse</li>
 					</ul>
 				</div>
