--- a/inc_de/jobs-pleodat-offer.html
+++ b/inc_de/jobs-pleodat-offer.html
@@ -41,8 +41,8 @@
     			
     				<div class="col-1-4 service-box service-5" >
     					<div class="service-entry">
-    					    <h3 class="pleodat-offer-white">5 Jahre</h3>
-    					    <p>Wenn Du zu uns passt und bleiben möchtest, werden wir gemeinsam 5 Jahre unsere Produktlandschaft weiterentwickeln. Wenn alles gut läuft, bleibst Du auch danach, so lange Du möchtest.</p>
+    					    <h3 class="pleodat-offer-white">5 Jahre öffentlich gefördert</h3>
+    					    <p>Wenn Du zu uns passt und bleiben möchtest, werden wir gemeinsam noch die nächsten 4 Jahre und darübver hinaus unsere Produktlandschaft weiterentwickeln. Wenn alles gut läuft, bleibst Du auch danach, so lange Du möchtest.</p>
     					</div>
     				</div>
     				
