--- a/inc_de/jobs-pleodat-contact.html
+++ b/inc_de/jobs-pleodat-contact.html
@@ -4,7 +4,7 @@
         	&nbsp;<br />
         	&nbsp;<br />
         	&nbsp;<br />
-			<h3>Du möchtest die Daten-Engine für die Zukunft des Wissens entwickeln? </h3>
+			<h3>Du möchtest an der Softwareplattform zur schnelleren Schaffung von Wissen mitentwickeln? </h3>
 			<p>Dann freuen wir uns über Deine Bewerbung in einer verschlüsselten eMail an jobs@pleodat.de</p>
 			<a href="/files/pleodat_jobs_pgp_public_key.asc" download>&#128274; Download unseres PGP-Schlüssels</a>
         	<br />
