--- a/inc_de/footer.html
+++ b/inc_de/footer.html
@@ -5,10 +5,10 @@
                 <div class="footer-widget">
                     <h3>Über uns</h3>
                     <div class="textwidget">
-                        <p>Pleodat GmbH<br>Eine Tochtergesellschaft der <a target="_blank" href="https://www.sprind.org/">SPRIND</a></p>
+                        <p>Pleodat GmbH<br>Ein Tochterunternehmen der <a target="_blank" href="https://www.sprind.org/">SPRIN-D</a></p>
                         <ul>
                         	<li><a target="_blank" href="https://www.sprind.org/de/projekte/cortex-datenbank/">SPRIND Projektseite</a></li>
-                			<li><a target="_blank" href="https://www.cortex-ag.com">Cortex AG Webseite</a></li>
+                			<li><a target="_blank" href="https://www.cortex-ag.com">Cortex AG Website</a></li>
                 			<li><a target="_blank" href="https://docs.cortex-ag.com">Dokumentation der Cortex-InformationsPlattform</a></li>
                         </ul>
                     </div>
@@ -33,7 +33,7 @@
                 <div class="footer-widget">
                     <h3>Weitere Informationen</h3>
                     <div class="textwidget">
-                	<p>Die Pleodat GmbH ist ein Tochterunternehmen der SPRIND (Bundesagentur für Sprunginnovationen) und in Entwicklungskooperation mit der Cortex AG.</p>
+                	<p>Die Pleodat GmbH ist ein Tochterunternehmen der SPRIN-D (Bundesagentur für Sprunginnovationen) und in Entwicklungskooperation mit der Cortex AG.</p>
                 	<br>
                     <p>Bei Fragen zur Entwicklung, Forschung oder Forschungkooperationen im öffentlichen Bereich wenden Sie sich bitte direkt an die Pleodat GmbH.</p
                 	<p>Bei Fragen zur Projektberatung oder -durchführung sowie Lizenzen, Dokumentationen und Schulungen wenden Sie sich bitte an die Cortex AG.</p>
